src/scope/snapshots/rnix_analyzer__scope__tests__scope_let_in_error_already_defined_as_string.snap
---
source: src/scope/mod.rs
expression: "format!(\"{}\\n=========\\n{:#?}\", nix_code, errors)"

---
let a = 1; "a" = 1; in a
=========
[
    Scope(
        AlreadyDefined(
            LetIn,
            "a",
            11..14,
            4..5,
        ),
    ),
]
