src/scope/snapshots/rnix_analyzer__scope__tests__scope_let_in_error_nested_already_defined.snap
---
source: src/scope/mod.rs
expression: scopes.1
---
[
    AlreadyDefined(
        LetIn,
        "a.b",
        [13; 16),
        [4; 7),
    ),
]
