src/scope/snapshots/rnix_analyzer__scope__tests__scope_let_in_error_nested_parent_already_defined.snap
---
source: src/scope/mod.rs
expression: "format!(\"{}\\n=========\\n{:#?}\", nix_code, errors)"

---
let a.b = 1; a.b.c = 1; in a
=========
[
    Scope(
        AlreadyDefined(
            LetIn,
            "a.b",
            13..16,
            6..7,
        ),
    ),
]
