src/scope/snapshots/rnix_analyzer__scope__tests__scope_let_in_inherit-2.snap
---
source: src/scope/mod.rs
expression: scope_tree
---
InverseScopeTree {
    leaf_scopes: [
        ScopePath(
            [
                Scope {
                    kind: LetIn,
                    defines: {
                        "a": Definition {
                            id: 0,
                            name: "a",
                            text_range: [4; 5),
                        },
                        "b": Definition {
                            id: 1,
                            name: "b",
                            text_range: [11; 12),
                        },
                        "builtins": Definition {
                            id: 2,
                            name: "builtins",
                            text_range: [26; 34),
                        },
                    },
                    text_range: [0; 44),
                },
            ],
        ),
    ],
}
